Fixed stuff + added table widget

--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -26,7 +26,7 @@ $(function() {
     </li>
 
         <li data-row="2" data-col="1" data-sizex="3" data-sizey="1">
-      <div data-id="unresolved_zendesk_tickets" data-view="Zendesk" data-limit="5" data-title="Zendesk tickets" data-moreinfo=""></div>
+      <div data-id="unresolved_zendesk_tickets" data-view="Table" data-limit="5" data-title="Zendesk tickets" data-moreinfo=""></div>
     </li>
 
     <li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
@@ -46,7 +46,7 @@ $(function() {
     </li>
 
     <li data-row="1" data-col="4" data-sizex="2" data-sizey="2">
-      <div data-id="jira_duedate_week" data-view="List" data-unordered="true" data-title="JIRA upcoming" data-moreinfo=""></div>
+      <div data-id="jira_duedate_week" data-view="Table" data-unordered="true" data-title="JIRA upcoming"></div>
     </li>
 
     <%# <li data-row="1" data-col="1" data-sizex="2" data-sizey="1"> %>
