Cleaning up + adjusting some css

--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -25,8 +25,8 @@ $(function() {
     <i class="icon-heart icon-background"></i>
     </li>
 
-        <li data-row="2" data-col="1" data-sizex="3" data-sizey="1">
-      <div data-id="unresolved_zendesk_tickets" data-view="Table" data-limit="5" data-title="Zendesk tickets" data-moreinfo=""></div>
+    <li data-row="2" data-col="1" data-sizex="3" data-sizey="1">
+      <div data-id="unresolved_zendesk_tickets" data-view="Table" data-limit="6" data-title="Zendesk tickets" data-moreinfo="" style="background-color: #78A300;"></div>
     </li>
 
     <li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
@@ -46,7 +46,7 @@ $(function() {
     </li>
 
     <li data-row="1" data-col="4" data-sizex="2" data-sizey="2">
-      <div data-id="jira_duedate_week" data-view="Table" data-unordered="true" data-title="JIRA upcoming"></div>
+      <div data-id="jira_duedate_week" data-view="Table" data-unordered="true" data-title="JIRA upcoming" style="background-color: #205081;"></div>
     </li>
 
     <%# <li data-row="1" data-col="1" data-sizex="2" data-sizey="1"> %>
