--- a/widgets/table/table.scss
+++ b/widgets/table/table.scss
@@ -22,7 +22,7 @@ $moreinfo-color:    rgba(255, 255, 255, 0.7);
 
   table {
       width: 100%;
-      margin: 0 20px;
+      margin: 20px 20px;
   }
 
   th, td {
