--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -125,7 +125,11 @@ h3 {
   opacity: 0.1;
   font-size: 275px;
   text-align: center;
-  margin-top: 82px;
+  margin-top: 55px;
+}
+
+.icon-comment {
+    margin-top: 30px;
 }
 
 .list-nostyle {
