--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -21,12 +21,13 @@ $(function() {
     </li>
 
     <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
-    <div data-id="count_unresolved_zendesk_tickets" data-view="Number" data-title="Aantal Zendesk tickets" style="background-color:#96bf48;"></div>
-    <i class="icon-heart icon-background"></i>
+      <div data-id="count_unresolved_zendesk_tickets" data-view="Number" data-title="Aantal Zendesk tickets" style="background-color:#96bf48;"></div>
+      <i class="icon-heart icon-background"></i>
     </li>
 
     <li data-row="2" data-col="1" data-sizex="3" data-sizey="1">
       <div data-id="unresolved_zendesk_tickets" data-view="Table" data-limit="6" data-title="Zendesk tickets" data-moreinfo="" style="background-color: #78A300;"></div>
+      <i class="icon-comment icon-background"></i>
     </li>
 
     <li data-row="3" data-col="3" data-sizex="1" data-sizey="1">
