--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -140,6 +140,17 @@ h3 {
   list-style: none;
 }
 
+.gridster li {
+    overflow: hidden;
+    display:  list-item;
+}
+
+.height-wrapper {
+    display: table;
+    width: 100%;
+    height: 100%;
+}
+
 .gs_w {
   width: 100%;
   display: table;
