Add limit to jira widget

--- a/dashboards/main.erb
+++ b/dashboards/main.erb
@@ -64,7 +64,7 @@ $(function() {
 
     <li data-row="1" data-col="4" data-sizex="2" data-sizey="2">
       <div class="height-wrapper">
-        <div data-id="jira_duedate_week" data-view="Table" data-unordered="true" data-title="JIRA upcoming" style="background-color: #205081;"></div>
+        <div data-id="jira_duedate_week" data-view="Table" data-limit="15" data-unordered="true" data-title="JIRA upcoming" style="background-color: #205081;"></div>
         </div>
     </li>
 
