--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -47,6 +47,7 @@ body {
   font-size: 20px;
   color: $text-color;
   font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  // overflow: hidden;
 }
 
 b, strong {
@@ -138,6 +139,8 @@ h3 {
 
 .gridster ul {
   list-style: none;
+  position: relative;
+  overflow: hidden;
 }
 
 .gridster li {
