--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -47,7 +47,7 @@ body {
   font-size: 20px;
   color: $text-color;
   font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
-  // overflow: hidden;
+  overflow: hidden;
 }
 
 b, strong {
