Updated dependencies, removed dilbert (broken), added xolphin

--- a/dashboards/dash1.erb
+++ b/dashboards/dash1.erb
@@ -13,36 +13,47 @@
 
 <div class="gridster">
   <ul>
+    <!--
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
       <div class="height-wrapper">
         <div data-view="Image" data-image="/logo.png"></div>
       </div>
     </li>
+    -->
 
-    <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
+    <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
+      <div class="height-wrapper">
+        <div data-id="xolphin_certificates" data-view="Table" data-limit="6" data-title="SSL certificaten" data-moreinfo="" style="background-color: #9c4274;"></div>
+        <i class="icon-check icon-background"></i>
+      </div>
+    </li>
+
+    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
       <div class="height-wrapper">
         <div data-id="count_unresolved_zendesk_tickets" data-view="Number" data-title="Aantal Zendesk tickets" style="background-color:#EC663C;"></div>
         <i class="icon-frown icon-background"></i>
         </div>
     </li>
 
-    <li data-row="1" data-col="3" data-sizex="1" data-sizey="1">
+    <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">
       <div class="height-wrapper">
         <div data-id="count_recently_resolved_zendesk_tickets" data-view="Number" data-title="Onlangs opgeloste tickets" style="background-color:#96bf48;"></div>
         <i class="icon-heart icon-background"></i>
         </div>
     </li>
 
+    <!--
     <li data-row="1" data-col="4" data-sizex="1" data-sizey="1">
       <div class="height-wrapper">
         <div data-view="Clock"></div>
         <i class="icon-time icon-background"></i>
       </div>
     </li>
+    -->
 
     <li data-row="2" data-col="1" data-sizex="4" data-sizey="1">
       <div class="height-wrapper">
-        <div data-id="unresolved_zendesk_tickets" data-view="Table" data-limit="6" data-title="Zendesk tickets" data-moreinfo="" style="background-color: #78A300;"></div>
+        <div data-id="unresolved_zendesk_tickets" data-view="Table" data-limit="6" data-title="Openstaande Zendesk tickets" data-moreinfo="" style="background-color: #78A300;"></div>
         <i class="icon-comment icon-background"></i>
       </div>
     </li>
