TIMONLINE-1260: framework backups toegevoegd

--- a/dashboards/dash1.erb
+++ b/dashboards/dash1.erb
@@ -51,9 +51,16 @@
     </li>
     -->
 
-    <li data-row="2" data-col="1" data-sizex="4" data-sizey="1">
+    <li data-row="2" data-col="1" data-sizex="2" data-sizey="1">
       <div class="height-wrapper">
         <div data-id="unresolved_zendesk_tickets" data-view="Table" data-limit="6" data-title="Openstaande Zendesk tickets" data-moreinfo="" style="background-color: #78A300;"></div>
+        <i class="icon-comment icon-background"></i>
+      </div>
+    </li>
+
+    <li data-row="2" data-col="1" data-sizex="2" data-sizey="1">
+      <div class="height-wrapper">
+        <div data-id="borgbackup" data-view="Table" data-limit="6" data-title="Backups" data-moreinfo="" style="background-color: #12B0C5;"></div>
         <i class="icon-comment icon-background"></i>
       </div>
     </li>
